--- a/l10n_th_account_report/static/description/index.html
+++ b/l10n_th_account_report/static/description/index.html
@@ -396,6 +396,7 @@ ul.auto-toc {
 <h2><a class="toc-backref" href="#id4">12.0.1.0.1 (2019-07-05)</a></h2>
 <ul class="simple">
 <li>Fix excel get wrong tax date, tax id and branch id</li>
+<li>Order by tax date, partner and number tax date</li>
 </ul>
 </div>
 <div class="section" id="id2">
