--- a/l10n_th_vendor_tax_invoice/static/description/index.html
+++ b/l10n_th_vendor_tax_invoice/static/description/index.html
@@ -456,7 +456,8 @@ But we should still now see the new <tt class="docutils literal">Tax Invoice Num
 </ul>
 <p><strong>Case Tax Adjustments</strong></p>
 <ul class="simple">
-<li>Go to Invoicing &gt; Accounting &gt; Tax Adjustments, create journal entry directly new tax</li>
+<li>Go to Invoicing &gt; Accounting &gt; Tax Adjustments</li>
+<li>Create journal entry directly to adjust tax (manually by accountant)</li>
 </ul>
 </div>
 <div class="section" id="changelog">
@@ -490,7 +491,7 @@ But we should still now see the new <tt class="docutils literal">Tax Invoice Num
 <div class="section" id="id5">
 <h2><a class="toc-backref" href="#id13">12.0.2.1.0 (2019-07-17)</a></h2>
 <ul class="simple">
-<li>Add partne_id and fields Tax Thailand in Tax Adjustments Wizard (case Tax Adjustments)</li>
+<li>Add partner, invoice date/number and amount fields in Tax Adjustments Wizard (to comply with Thai tax report)</li>
 <li>Fix bug Tax Base amount in move line is 0 (case undue vat)</li>
 </ul>
 </div>
